Set correct z-index for layer menu

--- a/src/components/Layers/Layers.css
+++ b/src/components/Layers/Layers.css
@@ -2,7 +2,7 @@
   position: absolute;
   right: 10px;
   top: calc(var(--Header-height) + 260px);
-  z-index: 50;
+  z-index: 10;
   min-width: 30px;
   min-height: 30px;
   background-color: #fff;
